--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bynder/bynder-js-sdk",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "Bynder Javascript SDK",
   "main": "./dist/bynder-js-sdk.js",
   "scripts": {
@@ -14,48 +14,57 @@
     "dist/bynder-js-sdk.js"
   ],
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.9",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "~3.7.1",
+    "eslint": "^5.0.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.15.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-jsdoc3": "^2.0.0",
-    "jest": "^24.9.0",
+    "gulp-jsdoc3": "^3.0.0",
+    "jest": "^28.1.3",
     "json-loader": "^0.5.7",
     "path": "^0.12.7",
-    "webpack": "^4.41.0"
+    "webpack": "^4.44.2"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "elliptic": "6.5.4",
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "axios": "^0.28.0",
+    "elliptic": "6.6.1",
     "handlebars": "4.7.7",
     "ini": "1.3.8",
     "is-url": "^1.2.4",
     "isomorphic-form-data": "^1.0.0",
     "proper-url-join": "^1.2.0",
     "query-string": "6.14.1",
-    "simple-oauth2": "^2.5.1",
+    "simple-oauth2": "^3.4.0",
     "ssri": "6.0.2",
     "websocket-extensions": "0.1.4",
     "y18n": "4.0.3",
     "yargs-parser": "13.1.2"
   },
   "resolutions": {
+    "braces": "^3.0.3",
     "graceful-fs": "^4.2.4",
     "lodash": "^4.17.21",
-    "@hapi/hoek": "8.5.0"
+    "json5": "2.2.3",
+    "micromatch": "4.0.8",
+    "postcss": "8.4.31",
+    "sanitize-html": "2.12.1",
+    "send": "0.19.0",
+    "serialize-javascript": "6.0.2"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git"
 }
